--- a/.github/workflows/arpal.yml
+++ b/.github/workflows/arpal.yml
@@ -24,3 +24,13 @@ jobs:
           TELEGRAM_CHAT_IDS: ${{ secrets.TELEGRAM_CHAT_IDS }}
         run: |
           python minitor_arpal.py
+      - name: Commit JSON aggiornati
+        if: always()
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add arpal_state.json || true
+          git commit -m "Aggiorna arpal_state.json da GitHub Actions [skip ci]" || echo "Nessuna modifica da committare"
+          git push || echo "Push fallito"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
