--- a/.github/workflows/meteo.yml
+++ b/.github/workflows/meteo.yml
@@ -28,3 +28,13 @@ jobs:
           TELEGRAM_CHAT_IDS: ${{ secrets.TELEGRAM_CHAT_IDS }}
         run: |
           python meteo.py
+      - name: Commit JSON aggiornati
+        if: always()
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add storico_24h.json meteo_memoria.json sbcape.json raffica.json arpal_state.json || true
+          git commit -m "Aggiorna JSON da GitHub Actions [skip ci]" || echo "Nessuna modifica da committare"
+          git push || echo "Push fallito"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
