--- a/.github/workflows/sbcape.yml
+++ b/.github/workflows/sbcape.yml
@@ -26,3 +26,13 @@ jobs:
           TUYA_ENDPOINT: ${{ secrets.TUYA_ENDPOINT }}
         run: |
           python calcola_SBCAPE.py
+      - name: Commit JSON aggiornati
+        if: always()
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add sbcape.json || true
+          git commit -m "Aggiorna sbcape.json da GitHub Actions [skip ci]" || echo "Nessuna modifica da committare"
+          git push || echo "Push fallito"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
