Fix flusso MeteoBot, Telegram e workflow push

--- a/.github/workflows/meteo.yml
+++ b/.github/workflows/meteo.yml
@@ -5,11 +5,16 @@ on:
   schedule:
     - cron: '0 * * * *'  # Ogni ora
 
+permissions:
+  contents: write
+
 jobs:
   run-meteo:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -34,7 +39,11 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add storico_24h.json meteo_memoria.json sbcape.json raffica.json arpal_state.json || true
-          git commit -m "Aggiorna JSON da GitHub Actions [skip ci]" || echo "Nessuna modifica da committare"
-          git push || echo "Push fallito"
+          if git diff --cached --quiet; then
+            echo "Nessuna modifica da committare"
+          else
+            git commit -m "Aggiorna JSON da GitHub Actions [skip ci]"
+            git push
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
