--- a/.github/workflows/raffiche.yml
+++ b/.github/workflows/raffiche.yml
@@ -1,7 +1,9 @@
 name: MeteoBot - Monitor Raffiche
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: {}
+  repository_dispatch:
+    types: [run-raffiche]
   schedule:
     - cron: '10 * * * *'  # 10 minuti dopo l'ora
 
