Invio foto insieme + timestamp radar
- Refactoring: run_analysis() e mark_sent() esportabili da entrambi i monitor
- Nuovo send_monitors.py: orchestra fulmini→omirl, invia come album Telegram
- Aggiunto timestamp radar RainViewer nei messaggi (ora generazione immagine)
- Workflow unificato: singolo step python send_monitors.py

--- a/.github/workflows/monitor-meteo.yml
+++ b/.github/workflows/monitor-meteo.yml
@@ -43,19 +43,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run monitor_omirl.py
+      - name: Run monitor meteo unificato
         env:
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
           TELEGRAM_CHAT_IDS: ${{ secrets.TELEGRAM_CHAT_IDS }}
         run: |
-          python monitor_omirl.py
-
-      - name: Run monitor_fulmini.py
-        env:
-          TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
-          TELEGRAM_CHAT_IDS: ${{ secrets.TELEGRAM_CHAT_IDS }}
-        run: |
-          python monitor_fulmini.py
+          python send_monitors.py
 
       - name: Commit stato aggiornato
         if: always()
